# neosql-core

./: .cz.toml  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  meson.build  pyproject.toml
.github/workflows/: ci.yaml
core/src/: meson.build
core/src/db_driver/: db_header.c  page.c  page.h
core/src/db_dto/: meson.build
core/src/sql_driver/: meson.build
core/src/utils/: buf_reader.h
include/: connection.h  database_constrains.h  os.h  pseudo_static.h  table.h  types.h
include/database_driver/: addr.h  block.h  database_defaults.h  header.h  page.h  pages.h
include/driver/: addr.h  defaults.h  driver.h  header.h  list_block.h  page.h
include/dto/: record.h  table.h
include/tests/: utils.h
include/utils/: buf_reader.h  buf_writer.h  mem.h  os.h  stream_ext.h
scripts/: release.sh  test.sh
src/: connection.c  connection.h  lib.rs  meson.build  table.c
src/database_driver/: addr.c  block.c  header.c  meson.build  page.c  pages.c
src/db_driver/: addr.c  addr.h  block.h  db_driver.c  db_driver.h  db_header.c  db_header.h  list_block.c  list_block.h  meson.build  page.c  page.h
src/driver/: addr.c  driver.c  header.c  list_block.c  meson.build  page.c
src/dto/: meson.build  record.c  table.c
src/sql/: meson.build
src/utils/: buf_reader.c  buf_writer.c  buf_writer.h  mem.c  meson.build  os.c  stream_ext.c
subprojects/: libnclib.wrap
tests/: meson.build  test_block.c  test_connection.c  test_driver.c  test_header.c  test_page.c  test_pages.c  test_table.c
tests/assets/: database.db  gen_database.c  gen_database.py  test_database.db
tests/core_tests/: meson.build  test_header.c
